term scss: fix letter spacing on font-merri

--- a/src/styles/components/term.scss
+++ b/src/styles/components/term.scss
@@ -14,6 +14,9 @@ td {
     @include font-size($font-size-base * 1.2);
     &:not(.font-regular) {
       letter-spacing: 2px;
+      > .font-merri {
+        letter-spacing: initial;
+      }
     }
     padding: 0 12px;
     &.small {
